Most of the code is ok except the images are not correctly placed

--- a/index.html
+++ b/index.html
@@ -3,8 +3,64 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
+    <link  href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+<div class="head">
+  <h1>Broadway Design</h1>
+  <p >
+  <a href="./index.html">Home</a><br>
+  <a href="#Process">Process</a><br>
+  <a href="#Work">Work</a><br>
+  <a href="#Team">Team</a><br>
+  <a href="#Contact">Contact</a>
+</p>
+</div>
+
+  <p>
+    <div id="Process">
+  <h2>Our Process</h2>
+  <img src="./resources/images/identify.svg" alt="identify" align="middle">
+  <h3>Identify</h3>
+  <h6>We focus on the most important details.</h6>
+    <img src="./resources/images/understand.svg" alt="understand">
+  <h3>Understand</h3>
+  <h6>We study our projects inside and out.</h6>
+  <img src="./resources/images/execute.svg" alt="execute">
+  <h3>Execute</h3>
+  <h6>We put everything we have into our work.</h6>
+    </div>
+    <div id="Work">
+  <h1>Designed in New York</h1>
+  <h3>Portofolio</h3>
+  <h6>Comming soon</h6>
+    </div>
+    <div id="Team">
+  <h3>Team</h3>
+  <h6>We're Hiring!</h6>
+  </div>
+  <div id="Contact">
+  <h3>Contact</h3>
+  <h6>
+    <p>Phone:(555)-555-5555</p>
+    <p>E-mail:test@example.com</p>
+    <p>Twitter:@test </p>
+    </h6>
+    </div>
+</p>
+
+
+  <p >
+    <div class="foot">
+      <span>&copy;Broadway 2017</span>
+  <a href="./index.html">Home</a>
+  <a href="#Process">Process</a>
+  <a href="#Work">Work</a>
+  <a href="#Team">Team</a>
+  <a href="#Contact">Contact</a>
+  </div>
+</p>
+
 
   </body>
 </html>
